--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="result-area">결과</div>
     <div id="chance-area">남은 찬스</div>
-    
+    <div id="answer-area">정답</div>
     
     <script src="main.js"></script>
 </body>
